unpackaged/main/default/objects/litify_pm__COI_Preset_Search_Field__c/litify_pm__COI_Preset_Search_Field__c.object-meta.xml
<CustomObject>
    <label>COI Preset Search Field</label>
    <nameField>
        <label>COI Preset Search Field API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COI Preset Search Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>