unpackaged/main/default/objects/litify_pm__COI_Preset_Search_Field__c/fields/litify_pm__COI_Host_Object__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__COI_Host_Object__c</fullName>
    <label>COI Host Object</label>
    <referenceTo>litify_pm__COI_Host_Object__c</referenceTo>
    <relationshipLabel>COI Preset Search Fields</relationshipLabel>
    <relationshipName>COI_Preset_Search_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>