unpackaged/main/default/objects/litify_pm__COI_Preset_Search_Field__c/fields/litify_pm__Is_Key_Term__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Is_Key_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Key Term</label>
    <type>Checkbox</type>
</CustomField>