unpackaged/main/default/objects/litify_pm__COI_Preset_Search_Field__c/fields/litify_pm__Is_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Is_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Name</label>
    <type>Checkbox</type>
</CustomField>