unpackaged/main/default/objects/litify_pm__COI_Preset_Search_Field__c/fields/litify_pm__Is_Related_List__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Is_Related_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Related List</label>
    <type>Checkbox</type>
</CustomField>