unpackaged/main/default/objects/litify_pm__COI_Preset_Search_Field__c/fields/litify_pm__Related_List_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Related_List_Object_Name__c</fullName>
    <label>Related List Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>